src/Scripts/css/tabulator.less
// main: main.less
@import "../node_modules/tabulator-tables/dist/css/tabulator.css";

.tabulator {
    border: none;
    background: none !important;

    .row-highlighted,
    .row-contains-highlighted .column-icon {
        background-color: @warning-back-color  !important;

        .dark & {
            background-color: @warning-back-color-dark  !important;
        }

        &:hover,
        &.active {
            background-color: darken(@warning-back-color, 10%) !important;

            .dark & {
                background-color: lighten(@warning-back-color-dark, 10%) !important;
            }
        }

        .icon {
            &:before {
                color: @warning-color;

                .dark & {
                    color: @warning-color-dark;
                }
            }
        }
    }

    .row-hidden {

        .column-name {
            opacity: 0.7;
            .icon;

            &:after {
                content: "\e92e"; //icon-hidden
                margin: 4px 2px 0 0;
                font-size: 17px;
                position: absolute;
                right: 0;
                background: @table-cell-back-color;
                padding: 0 3px;

                .dark & {
                    background: @table-cell-back-color-dark
                }
            }
        }

        &.row-highlighted .column-name:after {
            background-color: @warning-back-color  !important;

            .dark & {
                background-color: lighten(@warning-back-color-dark, 10%) !important;
            }
        }

        &.row-error .column-name:after {
            background-color: @error-back-color  !important;

            .dark & {
                background-color: @error-back-color-dark  !important;
            }
        }
    }

    .row-disabled {
        opacity: 0.4;
    }

    .row-error,
    .row-contains-error .column-icon {
        background-color: @error-back-color  !important;

        .dark & {
            background-color: @error-back-color-dark  !important;
        }

        &:hover,
        &.active {
            background-color: darken(@error-back-color, 10%) !important;

            .dark & {
                background-color: lighten(@error-back-color-dark, 10%) !important;
            }
        }

        .icon {
            &:before {
                color: @error-color;

                .dark & {
                    color: @error-color-dark;
                }
            }
        }
    }

    .row-aggregated {
        .column-name {
            .link;
        }
    }

    .size-indicator,
    .size-indicator-alt {
        background-color: @table-cell-size-indicator;
        height: 4px;
        .border-radius();
        position: absolute;
        bottom: 0;
        right: 0;

        .dark & {
            background-color: @table-cell-size-indicator-dark;
        }
    }

    .size-indicator-alt {
        background-color: @table-cell-size-indicator-alt;

        .dark & {
            background-color: @table-cell-size-indicator-alt-dark;
        }
    }

    .column-icon {
        width: 38px !important; //This avoid showing horizontal scrollbar (Tabulator bug)
        vertical-align: middle;
    }

    .tabulator-headers .column-select {
        padding-left: 1px;
    }

    .column-select {
        width: 38px !important; //This avoid showing horizontal scrollbar (Tabulator bug)
        min-width: 38px !important;
    }

    .tabulator-unselectable .column-select input {
        display: none;

    }

    .tree-toggle {
        display: inline-block;
        width: 26px;
        text-align: center;

        &:before {
            font-size: 20px;
            font-weight: normal !important;
            vertical-align: text-top;
            margin: 0 !important;
            cursor: pointer !important;
        }
    }

    .item-type {
        width: 30px;
        display: inline-block;
        pointer-events: none;
    }

    /*.tabulator-tree-level-0,
      .tabulator-tree-level-1,
      .tabulator-tree-level-2,
      .tabulator-tree-level-3,
      .tabulator-tree-level-4,
      .tabulator-tree-level-5 {
        .column-name {
          //font-weight:bold;
          cursor: pointer;
        }
      }*/
}

.tabulator .tabulator-header {
    border-bottom: 1px solid @border-color;
    background-color: @table-header-back-color;
    color: @table-header-color;
    font-size: 12px;
    text-transform: uppercase;

    .dark & {
        background-color: @table-header-back-color-dark;
        color: @table-header-color-dark;
        border-color: @border-color-dark;
    }
}

.tabulator.no-borders .tabulator-header {
    border: none;
}

.tabulator .tabulator-header .tabulator-col {
    border-right: 1px solid @border-color;
    background: none;

    .dark & {
        border-color: @border-color-dark;
    }

    &:last-child {
        border-right: 0;
    }
}

.tabulator .tabulator-header .tabulator-col.tabulator-moving {
    border: none;
    background: darken(@table-header-back-color, 10%);

    .dark & {
        background: lighten(@table-header-back-color-dark, 10%);
    }
}

.tabulator .tabulator-header .tabulator-col.tabulator-moving {

    border: none;
    background: darken(@table-header-back-color, 10%);

    .dark & {
        background: lighten(@table-header-back-color-dark, 10%);
    }
}

.tabulator .tabulator-header .tabulator-col .tabulator-col-content .tabulator-col-sorter .tabulator-arrow {
    border-bottom-color: @table-sorter-color;

    .dark & {
        border-bottom-color: @table-sorter-color-dark;
    }
}

.tabulator .tabulator-header .tabulator-col.tabulator-col-group .tabulator-col-group-cols {
    border-top: 1px solid @border-color;

    .dark & {
        border-color: @border-color-dark;
    }
}

/*.tabulator.no-borders .tabulator-header .tabulator-col.tabulator-col-group .tabulator-col-group-cols {
    border: none
}

.tabulator .tabulator-header .tabulator-col:first-child .tabulator-col-resize-handle.prev {
    display: none;
}*/

.tabulator .tabulator-header .tabulator-col.tabulator-sortable:hover {
    background-color: darken(@back-color, 10%);

    .dark & {
        background-color: lighten(@back-color-dark, 10%);
    }
}

.tabulator .tabulator-header .tabulator-col.tabulator-sortable[aria-sort="none"] .tabulator-col-content .tabulator-col-sorter {
    color: @table-sorter-color;

    .dark & {
        color: @table-sorter-color-dark
    }
}

.tabulator .tabulator-header .tabulator-col.tabulator-sortable[aria-sort="asc"] .tabulator-col-content .tabulator-col-sorter .tabulator-arrow {
    border-bottom-color: darken(@table-sorter-color, 30%);

    .dark & {
        border-bottom-color: lighten(@table-sorter-color-dark, 20%);
    }
}

.tabulator .tabulator-header .tabulator-col.tabulator-sortable[aria-sort="descending"] .tabulator-col-content .tabulator-col-sorter .tabulator-arrow {
    border-top-color: darken(@table-sorter-color, 30%);

    .dark & {
        border-top-color: lighten(@table-sorter-color-dark, 20%);
    }
}

.tabulator .tabulator-header .tabulator-calcs-holder .tabulator-row {
    background: @table-cell-back-color  !important;

    .dark & {
        background: @table-cell-back-color-dark  !important;
    }
}

.tabulator .tabulator-tableholder .tabulator-placeholder {
    width: 90%;
    color: @notice-color;
    padding: 0 0 0 5px;
}

.tabulator .tabulator-tableholder .tabulator-placeholder[tabulator-render-mode="virtual"] {
    min-height: auto;
    min-width: auto;
}

.tabulator .tabulator-tableholder .tabulator-table {
    background: none !important;
}

.tabulator .tabulator-footer {
    padding: 10px 10px;
    background-color: transparent !important;
    text-align: right;
    border: none;
}

.tabulator .tabulator-footer .tabulator-calcs-holder {
    margin: -5px -10px 5px -10px;
    background: none !important;
    border: none !important;
}

.tabulator .tabulator-footer .tabulator-calcs-holder .tabulator-row {
    background: none !important;
  }

.tabulator-row {
    background-color: @table-cell-back-color;
    border-top: 1px solid @border-color;

    .no-borders & {
        border: none
    }

    .dark & {
        background-color: @table-cell-back-color-dark;
        border-color: @border-color-dark;
    }

    &.tabulator-calcs-bottom {
        border: none
    }

    &:first-child {
        border-top: none;
    }
}

.tabulator-row.tabulator-row-even {
    background-color: @table-cell-back-color-alt;

    .dark & {
        background-color: @table-cell-back-color-alt-dark;
    }
}

.tabulator-row:not(.tabulator-calcs):not(.row-inactive):hover,
.tabulator-row.active {
    background-color: darken(@table-cell-back-color-alt, 5%);

    .dark & {
        background-color: lighten(@table-cell-back-color-alt-dark, 5%);
    }

    &.row-hidden .column-name:after {
        background-color: darken(@table-cell-back-color-alt, 5%);

        .dark & {
            background-color: lighten(@table-cell-back-color-alt-dark, 5%);
        }
    }
}

.tabulator-row.tabulator-selected,
.tabulator-row.tabulator-selected:hover {
    background: none;
    cursor: default;
}

&.row-highlighted {
    background-color: darken(@warning-back-color, 20%) !important;

    .dark & {
        background-color: lighten(@warning-back-color-dark, 20%) !important;
    }
}

&.row-error {
    background-color: darken(@error-back-color, 20%) !important;

    .dark & {
        background-color: lighten(@error-back-color-dark, 20%) !important;
    }
}

.tabulator-row.row-active,
.tabulator-row.row-active:hover {
    .border-radius();
    border-color: transparent !important;
    background-color: @table-cell-active-back-color  !important;

    .dark & {
        background-color: @table-cell-active-back-color-dark  !important;
    }

    &.row-hidden .column-name:after {
        background-color: @table-cell-active-back-color  !important;

        .dark & {
            background-color: @table-cell-active-back-color-dark  !important;
        }
    }

    &+.tabulator-row {
        border-color: transparent !important;
    }
}

.tabulator-row .tabulator-cell {
    padding: 6px 4px;
    border-right: none;
  
    [class^="icon-"], [class*=" icon-"] {
      &:before {
        font-size: 20px;
      }
    }
}

.tabulator-row .tabulator-cell:first-child .tabulator-col-resize-handle.prev {
    display: none;
}

